@@ -193,7 +193,7 @@
 				InlineFunctionExpansion="1"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				StringPooling="true"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				PrecompiledHeaderFile=".\libjpeg___Win32_Release/LibJpeg.pch"
 				AssemblerListingLocation=".\libjpeg___Win32_Release/"
